--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6B76D6</color>
-    <color name="colorPrimaryDark">#2A3156</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#1D1D1E</color>
     <color name="colorAccent">#ffffff</color>
 </resources>
